--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,49 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* po resetu vlastni styl */
+
 body { 
 	font-family: Tahoma, Geneva, sans-serif;
 	margin: 0; 
@@ -55,30 +101,64 @@ body {
 		color-stop(0.50, rgb(5,5,5)),
 		color-stop(0.50, rgb(71,71,71))
 	);
-	background: -moz-linear-gradient(
-		center bottom,
-		rgb(5,5,5) 50%,
-		rgb(71,71,71) 50%
-	);	
+	
 	border: 1px solid #666;
 
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
+	
 }
 
-#credits {
+#basic button.controls {
 	display: block;
-	color: #999;
-	margin: 0;
-	text-align: right;
-	padding: 1px 5px 0 0;
-	height: 3%;
+	font-size: 100%;
+	width: 100%;
+	height: 100%;	
+	padding: 0;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 100%;
+	color: #333;
+	border: none;
+	background-color: #eee;
+	background: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0.50, rgb(200,200,200)),
+		color-stop(0.50, rgb(232,232,232))
+	);
+	border: 1px solid #666;
+
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	
 }
-#credits a, #credits a:link, #credits a:visited {
-	color: #ccc;
+
+#basic button.operand {
+	display: block;
+	font-size: 100%;
+	width: 100%;
+	height: 100%;	
+	padding: 0;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 100%;
+	color: #333;
+	border: none;
+	background-color: #ff0;
+	background: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0.50, rgb(150,150,0)),
+		color-stop(0.50, rgb(232,232,0))
+	);
+	border: 1px solid #666;
+
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	
 }
-#credits a:hover { 
-	color: #000; 
-	background-color: #ccc;
-}
+
+
